<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <TextView
        android:id="@+id/text_tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/e_ukraine_bold"
        android:gravity="start"
        android:text="@string/point_add_tittle"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintStart_toStartOf="@id/gl_ver_start"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_top" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        android:background="@drawable/frame_blue"
        android:src="@drawable/img_cross"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintTop_toTopOf="@+id/text_tittle"
        app:layout_constraintBottom_toBottomOf="@+id/text_tittle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/frame_blue"
        android:fontFamily="@font/e_ukraine_regular"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/point_add_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gl_hor_button"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintStart_toStartOf="@id/gl_ver_start" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintStart_toStartOf="@id/gl_ver_start"
        app:layout_constraintTop_toBottomOf="@+id/text_tittle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tittle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/e_ukraine_regular"
                android:text="@string/point_about_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/point_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/e_ukraine_regular"
                android:gravity="center_vertical"
                android:inputType="text"
                android:hint="@string/point_about_name"
                android:minHeight="40dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tittle_name" />

            <TextView
                android:id="@+id/tittle_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/e_ukraine_regular"
                android:layout_marginTop="20dp"
                android:text="@string/point_about_description"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/point_name" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/e_ukraine_regular"
                android:gravity="center_vertical"
                android:inputType="textMultiLine"
                android:minHeight="40dp"
                android:layout_marginTop="6dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/white"
                android:hint="@string/point_about_description"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tittle_description" />

            <TextView
                android:id="@+id/tittle_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/e_ukraine_regular"
                android:layout_marginTop="20dp"
                android:text="@string/point_add_coordinates"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <androidx.cardview.widget.CardView
                android:id="@+id/map_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@id/tittle_coordinates">

                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="null"
                android:textSize="10sp"
                android:textColor="@color/light_red"
                android:fontFamily="@font/e_ukraine_thin"
                android:gravity="center"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/map_card"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>